<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Let\'s Meetup!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Let\'s Meetup!</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="title_activity_lost_password">LostPasswordActivity</string>
    <string name="title_activity_find_friends">FindFriendsActivity</string>
    <string name="title_activity_close_friends">CloseFriendsActivity</string>
    <string name="title_activity_friend_map_activty">FriendMapActivty</string>
    <string name="title_activity_qa">QAActivity</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="title_activity_edit_account">EditAccountActivity</string>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="qa">        Q: Who are we? \n
        A: Claudius, Jon, Amna \n
        \n
        \n
        Q: What is this App? \n
        A: Let\'s Meet Up - where friends find friends \n
        \n
        \n
        Q: How cool are you? \n
        A: Very Fuckin\' Cool \n</string>
    <string name="common_questions">Commonly Asked Questions</string>
    <string name="when_invite">When </string>
    <string name="where_invite">Where</string>
    <string name="friend_map_name_of_friend">Name Of Friend</string>
    <string name="friend_map_miles">123 Miles Away</string>
    <string name="send_request_meetup">Send Meetup Request</string>
    <string name="title_activity_login_activty">LoginActivty</string>
    <string name="lost_password_button">Lost Password</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="login_password_label">Password: </string>
    <string name="login_username_label">Username: </string>
    <string name="login_main_title">Let\'s Meetup!</string>

    <!--create an account page-->
    <string name="register">Create Your Account!</string>
    <string name="create_first_name">First Name: </string>
    <string name="create_last_name">Last Name: </string>
    <string name="create_email">Email:</string>
    <string name="login_password_label_confirm">Confirm Password: </string>
    <string name="create_button">Let\'s Go Meet with Friends!</string>
    <string name="go_back_button">Whoops! Go back</string>
    <string name="create_account">Create your Account!</string>

    <!--forgot password page-->
    <string name="send_email">Email Address Associated with Account:</string>
    <string name="password_button">Send me my password!</string>

    <!--create user page-->
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Let\'s Meetup with Friends!</string>

    <!--forgot password page-->
    <string name="welcomemsg">Friends who are nearby: </string>

    <!--find friends page-->
    <string name="friendsmsg">Find your Friends.</string>
    <string name="search_username">Search a Username: </string>
    <string name="findfriend_button">Find Friend</string>
    <string name="addfriend_button">Add Friend</string>
    <string name="findfriend">Find Friends</string>


</resources>
