<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mbembac.letsmeetup.Application"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:weightSum="2"
        android:orientation="vertical"
        android:id="@+id/linearLayout2"
        android:clickable="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/login_main_title"
            android:textColor="#393939"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="6"
            android:shadowDx="2"
            android:shadowDy="1"
            android:textStyle="bold"
            android:id="@+id/login_main_title"
            android:textSize="60sp"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_username_label"
            android:textColor="#003366"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/login_username_label"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#003366"
            android:textColorHighlight="#FFFFFF"
            android:fontFamily="sans-serif-condensed"
            android:background="#FFEEFF"
            android:layout_gravity="center_horizontal"
            android:id="@+id/username"
            android:layout_marginBottom="10sp"
            android:cursorVisible="true"
            android:ems="10"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_password_label"
            android:textColor="#003366"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/login_password_label"
            android:layout_gravity="center_horizontal" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="#003366"
            android:textColorHighlight="#FFFFFF"
            android:fontFamily="sans-serif-condensed"
            android:background="#FFEEFF"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:cursorVisible="true"
            android:id="@+id/password" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_button"
            android:fontFamily="sans-serif-short"
            android:textAllCaps="true"
            android:id="@+id/login"
            android:textSize="15sp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:onClick="login"
            style="@style/main_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/register_button"
            android:fontFamily="sans-serif-short"
            android:textAllCaps="true"
            android:id="@+id/register"
            android:textSize="15sp"
            android:layout_margin="0dp"
            android:padding="10sp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:onClick="login"
            style="@style/main_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lost_password_button"
            android:fontFamily="sans-serif-short"
            android:id="@+id/lostpw"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:padding="10sp"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            style="@style/main_button"/>

    </LinearLayout>

</RelativeLayout>
