<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B7FFF0"
    tools:context="com.mbembac.letsmeetup.CreateAccountActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp">

        <!--title-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/create_account"
            android:layout_marginBottom="15dp"
            android:textColor="#393939"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textSize="40sp"
            android:id="@+id/textView"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />

        <!--text-box first name-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/create_first_name"
            android:textColor="#003366"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/first_name_label"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#003366"
            android:textColorHighlight="#FFFFFF"
            android:fontFamily="sans-serif-condensed"
            android:background="#E0FFFF"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_gravity="center_horizontal"
            android:id="@+id/login_first_name"
            android:layout_marginBottom="10sp"
            android:cursorVisible="true"
            android:ems="10"/>

        <!--text-box last name-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/create_last_name"
            android:textColor="#003366"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/last_name_label"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#003366"
            android:textColorHighlight="#FFFFFF"
            android:fontFamily="sans-serif-condensed"
            android:background="#E0FFFF"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10sp"
            android:ems="10"
            android:cursorVisible="true"
            android:id="@+id/login_last_name" />

        <!--text-box email-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/create_email"
            android:textColor="#003366"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/email_label"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#003366"
            android:textColorHighlight="#FFFFFF"
            android:fontFamily="sans-serif-condensed"
            android:background="#E0FFFF"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10sp"
            android:ems="10"
            android:cursorVisible="true"
            android:id="@+id/create_email" />

        <!--text-box username-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_username_label"
            android:textColor="#003366"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/login_username_label"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#003366"
            android:textColorHighlight="#FFFFFF"
            android:fontFamily="sans-serif-condensed"
            android:background="#E0FFFF"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10sp"
            android:ems="10"
            android:cursorVisible="true"
            android:id="@+id/username" />

        <!--text-box pw-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_password_label"
            android:textColor="#003366"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/login_password_label"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="#003366"
            android:textColorHighlight="#FFFFFF"
            android:fontFamily="sans-serif-condensed"
            android:background="#E0FFFF"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10sp"
            android:ems="10"

            android:id="@+id/password" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/create_button"
            android:fontFamily="sans-serif-short"
            android:id="@+id/signup"
            android:textSize="15sp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="true"
            android:clickable="true"
            style="@style/main_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/go_back_button"
            android:fontFamily="sans-serif-short"
            android:id="@+id/go_back_button"
            android:textSize="12sp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="true"
            android:clickable="true"
            style="@style/main_button"/>


    </LinearLayout>

</RelativeLayout>
