<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#BDF2FF"
    tools:context="com.mbembac.letsmeetup.LostPasswordActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp">

        <!--title-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Lost Your Password?"
            android:layout_marginBottom="15dp"
            android:textColor="#003366"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textSize="40dp"
            android:id="@+id/textView"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />


        <!--text-box username-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_username_label"
            android:textColor="#003366"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/login_username_label"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="#003366"
            android:textColorHighlight="#FFFFFF"
            android:fontFamily="sans-serif-condensed"
            android:background="#FFEEFF"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10sp"
            android:ems="10"
            android:id="@+id/login_username" />

        <!--text-box ask for email address-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/send_email"
            android:textColor="#003366"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/send_email_label"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="#003366"
            android:textColorHighlight="#FFFFFF"
            android:fontFamily="sans-serif-condensed"
            android:background="#FFEEFF"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10sp"
            android:ems="10"
            android:id="@+id/send_email" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/password_button"
            android:fontFamily="sans-serif-short"
            android:id="@+id/create_button"
            android:textSize="15sp"
            android:background="#003366"
            android:textColor="#FFFFFF"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="true"
            android:clickable="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/go_back_button"
            android:fontFamily="sans-serif-short"
            android:id="@+id/go_back_button"
            android:textSize="12sp"
            android:background="#003366"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="true"
            android:clickable="true" />


    </LinearLayout>

</RelativeLayout>
